# blackbox-runner

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml  run.ps1
.claude/: launch.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
content/: show.yaml
dev/: trackingbox.config.json
docs/: architecture.md  deployment.md  quickstart.md  runbook.md  touchdesigner.md
frontend/: FRONTEND.md
frontend/player/: index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/player/src/: App.svelte  app.css  app.html
frontend/player/src/components/: RoundPanel.svelte
scripts/: import_content.py  pocketbase_bootstrap.py  replay.py  validate_content.py
server/: app.py  bindings.py  config.py  content.py  content_db.py  engine.py  models.py  persistence.py  pocketbase_client.py  replay.py  show_store.py  tracking_client.py  tts.py  zones.py
td_scripts/: README.md  td_receive_cues.py
tests/: conftest.py  fake_pocketbase.py  test_app.py  test_bindings.py  test_content.py  test_crash_recovery.py  test_engine.py  test_models.py  test_persistence.py  test_pocketbase_integration.py  test_replay.py  test_show_store.py  test_tracking_client.py  test_tts.py  test_zones.py
tests/scenarios/: test_ambiguous_ritual_scenario.py  test_auto_rebind_scenario.py  test_server_restart_scenario.py  test_soak.py  test_trackingbox_restart_scenario.py
web/admin/: index.html
web/player/: index.html
(+12 files in other folders)
